# project_manip_ultradex

./: .env.serve  AGENTS.md  ASSETS.md  CLAUDE.md  Dockerfile.serve  MODULE_TODO.md  NEXT_STEPS.md  PIPELINE_MAP.md  PRD.md  README.md  anima_module.yaml  docker-compose.serve.yml  pyproject.toml
.claude/: MAP.md
.claude/rules/: cuda_version.md
configs/: convergence.toml  debug.toml  default.toml  paper.toml
docker/: Dockerfile  Dockerfile.isaacgym  docker-compose.yml  generate_grasps.py
launch/: manip_ultradex.launch.py
prds/: PRD-01-foundation.md  PRD-02-core-model.md  PRD-03-inference.md  PRD-04-evaluation.md  PRD-05-api-docker.md  PRD-06-ros2-integration.md  PRD-07-production.md  README.md
scripts/: bootstrap_cuda_deps.sh  evaluate_real.py  evaluate_sim.py  export_policy.py  generate_data.py  package_release.py  run_inference.py  train.py
tasks/: INDEX.md  PRD-0101.md  PRD-0102.md  PRD-0103.md  PRD-0104.md  PRD-0201.md  PRD-0202.md  PRD-0203.md  PRD-0204.md  PRD-0205.md  PRD-0301.md  PRD-0302.md  PRD-0303.md  PRD-0304.md  PRD-0401.md  PRD-0402.md  PRD-0403.md  PRD-0501.md  PRD-0502.md  PRD-0503.md  PRD-0601.md  PRD-0602.md  PRD-0603.md  PRD-0701.md  PRD-0702.md  PRD-0703.md
tests/: test_api_app.py  test_api_contract.py  test_cuda_integration.py  test_evaluation_metrics.py  test_foundation_config.py  test_grasp_pipeline.py  test_inference_runner.py  test_isaac_lab_integration.py  test_package_import.py  test_policy_network.py  test_production_release.py  test_reference_wrappers.py  test_replay_schema.py  test_ros2_bridge.py  test_training_components.py
(+73 files in other folders)
