[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anima-manip-ultradex"
version = "0.1.0"
description = "ANIMA MANIP-ULTRADEX — UltraDexGrasp foundation scaffold"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy>=1.25",
    "opencv-python>=4.9",
    "pydantic>=2.7",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.6",
    "mypy>=1.11",
    "httpx>=0.28",
]
serve = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
]
train = [
    "torch>=2.4",
    "click>=8.1",
    "h5py>=3.14",
    "tqdm>=4.66",
]
export = [
    "onnx>=1.16",
    "onnxruntime>=1.18",
]
reference = [
    "hydra-core>=1.3.2",
    "Pillow>=10.2",
    "plyfile>=1.1",
    "trimesh>=4.4",
    "usd-core>=24.8 ; platform_system != 'Darwin'",
    "ninja>=1.11 ; platform_system != 'Darwin'",
]
mac = [
    "mlx>=0.10 ; platform_system == 'Darwin'",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["src/anima_manip_ultradex"]
